# verilator-sim-skeleton

./: .gitignore  Makefile  README.md  simulator.cpp  top.v
rust/: Cargo.toml  attrram.hex  build.rs  font_cp437_8x8.hex  videoram.hex
rust/rtl/: addressdecoder.sv  chip.sv  control.sv  counter.v  hvsync_generator.v  por.sv  ram_async.sv  sprite.sv  textbuffer.sv  top.sv  top.v
rust/src/: main.rs
