[package]
name = "example"
version = "0.0.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
publish = false

build = "build.rs"

[dependencies]
verilated = "0.1.2"
verilated-module = "0.1.1"
minifb = "0.19.2"

[build-dependencies]
verilator = { version = "0.1", features = ["gen", "module"] }
